tests/typing/bad/testfile-bang2-1.scala
class A { def m() { var b: Boolean = ! null } }
object Main { def main(args: Array[String]) { } }
